# Phaethon

./: boostrap.sh  bootstrap.sh
frontend/: ivan_is_gay.py
lora-receiver/: aqi.py  config.py  database.py  logger.py  lora_receiver.py  main.py  pyproject.toml  redis_manager.py  tester.py
