[project]
name = "lora-receiver"
version = "0.1.0"
description = "LoRa to Redis Weather Gateway"
authors = [
    {name = "D0D0T"}
]
requires-python = ">=3.14"
dependencies = [
    "redis (>=7.4.0,<8.0.0)",
    "lorarf (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"